Make sure lmdb binaries are in integration test bin dir

--- a/src/FubuMVC.IntegrationTesting/FubuMVC.IntegrationTesting.csproj
+++ b/src/FubuMVC.IntegrationTesting/FubuMVC.IntegrationTesting.csproj
@@ -267,6 +267,14 @@
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
+    <Content Include="..\..\packages\LightningDB\content\lmdb32.dll">
+      <Link>lmdb32.dll</Link>
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+    <Content Include="..\..\packages\LightningDB\content\lmdb64.dll">
+      <Link>lmdb64.dll</Link>
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
     <Content Include="phantomjs.exe">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
